--- a/package.json
+++ b/package.json
@@ -3,8 +3,19 @@
   "version": "0.0.0",
   "description": "Backend app for Istanbul fullstack javascript workshop",
   "main": "index.js",
+  "scripts": {
+    "dev": "nodemon --watch index.js index.js"
+  },
   "repository": "git@github.com:maherapp/discussion-board-workshop-backend.git",
   "author": "@maher.app",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
